# loan-approval-prediction-with-mlops

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  demo.py  dvc.yaml  main.py  params.json  pyproject.toml  requirements-actions.txt  requirements.txt  setup.py  template.py
.dvc/: config
.github/workflows/: main.yml
app/: main.py  schema.py  utils.py
artifacts/data/: loanApprovalPrediction.csv.dvc
artifacts/preprocessor/: preprocessor.joblib.dvc
config/: config.json
notebooks/: load_data_to_mongodb.ipynb  research.ipynb
src/loanApprovalPrediction/components/: data_ingestion.py  data_processor.py  model_trainer.py
src/loanApprovalPrediction/config/: configuration.py
src/loanApprovalPrediction/constants/: __init__.py
src/loanApprovalPrediction/entity/: __init__.py
src/loanApprovalPrediction/exception/: __init__.py
src/loanApprovalPrediction/logger/: __init__.py
src/loanApprovalPrediction/pipeline/: __init__.py
src/loanApprovalPrediction/utils/: common.py
tests/components/: test_data_processor.py  test_model_trainer.py
tests/data/: data.json
