[project]
name = "loan-approval-prediction-with-mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"

[tool.ruff]
line-length = 88
target-version = "py38"

# Use Ruff as a formatter (optional)
[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ✅ Move linter options into the `lint` section
[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]

# Optional: Exclude files
exclude = [
  ".venv",
  "__pycache__",
  "build",
  "dist",
  "migrations",
]
